--- a/doc/tutorial/tutorial.tex
+++ b/doc/tutorial/tutorial.tex
@@ -29,7 +29,8 @@ Copyright (C) 2005-2009 Gostai SAS.
 
 
 There are several means to interact with a server spawned by
-\command{urbi}.  First of all, you may use the options
+\command{urbi}, see \autoref{sec:tools:urbi} for details.  First of
+all, you may use the options
 \option{-e}/\option{--expression \var{code}} and
 \option{-f}/\option{--file \var{file}} to send some \var{code} or the
 contents of some \var{file} to the newly run server.  You may combine
@@ -48,7 +49,6 @@ To run an interactive session, use option
 interpreters, \urbi will evaluate the given commands and print out the
 results.
 
-%\lstset{moredelim=[l][\urbiAnswerStyle]{[00000000:start]}}
 \begin{shell}[alsolanguage={[interactive]Urbi}]
 $ urbi -i
 [00000000:start] *** **********************************************************
