--- a/doc/faq.tex
+++ b/doc/faq.tex
@@ -68,20 +68,22 @@ to this object.
 \subsection{Slots and variables}
 
 \paragraph{How do I add a new slot in an object?}
-To add a slot to an object \code{O}, you have to use the \code{var} keyword:
+To add a slot to an object \lstinline{O}, you have to use the
+\lstinline{var} keyword:
 
 \begin{urbifixme}
 var O.mySlot = 42;
 \end{urbifixme}
 
 \noindent
-or you can use the "setSlot" method:
+or you can use the \lstinline{setSlot} method:
 
 \begin{urbifixme}
 O.setSlot("mySlot", 42);
 \end{urbifixme}
 
-Note that in a method, \code{this} designates the current object. For example,
+Note that in a method, \lstinline{this} designates the current
+object. For example,
 
 \begin{urbifixme}
 var this.mySlot = 42;
@@ -125,8 +127,8 @@ var myLocalVariable = "foo";
 
 
 \paragraph{How do I make a constructor?}
-You can define a method called \code{init} which will be called
-automatically by \code{new}. For example:
+You can define a method called \lstinline{init} which will be called
+automatically by \lstinline{new}. For example:
 
 \begin{urbifixme}
 class myObject {
@@ -140,7 +142,7 @@ myInstance = myObject.new(10, 20);
 
 
 \paragraph{How can I manipulate the list of prototypes of my objects?}
-The \code{protos} method returns a list (which can be manipulated)
+The \lstinline{protos} method returns a list (which can be manipulated)
 containing the list of your object prototype.
 
 \begin{urbifixme}
@@ -150,7 +152,7 @@ myObject.protos;
 \end{urbifixme}
 
 \paragraph{How can I know the slots available for a given object?}
-The \code{slotNames} and \code{allSlotNames} methods return
+The \lstinline{slotNames} and \lstinline{allSlotNames} methods return
 respectively the local slot names and the local+inherited slot names.
 
 \paragraph{How do I create a new function?}
@@ -171,8 +173,9 @@ var myObject = Object.new;
 function myObject.myFunction (x, y) { /* ... */ };
 \end{urbifixme}
 
-or even group definitions within a "do" scope, which will automatically
-define new slots instead of local variables and functions:
+or even group definitions within a \lstinline{do} scope, which will
+automatically define new slots instead of local variables and
+functions:
 
 \begin{urbifixme}
 var myObject = Object.new;
@@ -181,7 +184,8 @@ do (myObject) {
 };
 \end{urbifixme}
 
-or group those two statements by using a convenient "class" scope:
+or group those two statements by using a convenient \lstinline{class}
+scope:
 
 \begin{urbifixme}
 class myObject {
@@ -194,8 +198,8 @@ class myObject {
 \paragraph{How do I create a tag?}
 
 
-Tags are objects, and must be created as any object by using "new" to create
-derivatives of the "Tag" object.
+Tags are objects, and must be created as any object by using
+\lstinline{new} to create derivatives of the \lstinline{Tag} object.
 
 \begin{urbifixme}
 var myTag = Tag.new;
@@ -225,10 +229,11 @@ var res;
 res = { myTag: { do_something; 42 } };
 \end{urbifixme}
 
-After the execution, "res" will contain 42.
+After the execution, \lstinline{res} will contain 42.
 
-However, when a tag is stopped, all the statements tagged with that tag may
-be forced to return a value, by giving it as a parameter to "stop":
+However, when a tag is stopped, all the statements tagged with that
+tag may be forced to return a value, by giving it as a parameter to
+\lstinline{stop}:
 
 \begin{urbifixme}
 var myTag = Tag.new;
@@ -243,8 +248,8 @@ res;
 
 \subsection{Events}
 \paragraph{How do I create an event?}
-Events are objects, and must be created as any object by using "new" to create
-derivatives of the "Event" object.
+Events are objects, and must be created as any object by using
+\lstinline{new} to create derivatives of the \lstinline{Event} object.
 
 \begin{urbifixme}
 var ev = Event.new;
@@ -262,16 +267,18 @@ at(ev?(1, var msg)) {
 };
 \end{urbifixme}
 
-The \code{?} marker indicates that we are looking for an event instead of a
-boolean condition. The construction "var msg" indicates that the "msg"
-variable will be bound (as a local variable) in the body part of the "at"
-construct, with whatever value is present in the event that triggered the
-"at".
+The \lstinline{?} marker indicates that we are looking for an event
+instead of a boolean condition. The construct \lstinline{var msg}
+indicates that the \lstinline{msg} variable will be bound (as a local
+variable) in the body part of the \lstinline{at} construct, with
+whatever value is present in the event that triggered the
+\lstinline{at}.
 
 \subsection{Lists}
 \paragraph{How can I iterate over a list?}
 
-You can use the "for" construct to iterate over the elements of a list:
+You can use the \lstinline{for} construct to iterate over the elements
+of a list:
 
 \begin{urbiscript}
 for (var i: [10, 11, 12]) echo (i);
