--- a/doc/faq.tex
+++ b/doc/faq.tex
@@ -106,7 +106,7 @@ O.mySlot = 51;
 \end{urbifixme}
 
 \noindent
-or
+which is syntactic sugar for
 
 \begin{urbifixme}
 O.updateSlot("mySlot", 51);
@@ -161,7 +161,7 @@ any other slot in an object:
 
 \begin{urbifixme}
 var myObject = Object.new;
-var myFunction = function (x, y)
+var myObject.myFunction = function (x, y)
   { echo ("myFunction called with " + x + " and " + y) };
 \end{urbifixme}
 
@@ -173,6 +173,7 @@ var myObject = Object.new;
 function myObject.myFunction (x, y) { /* ... */ };
 \end{urbifixme}
 
+\noindent
 or even group definitions within a \lstinline{do} scope, which will
 automatically define new slots instead of local variables and
 functions:
@@ -184,6 +185,7 @@ do (myObject) {
 };
 \end{urbifixme}
 
+\noindent
 or group those two statements by using a convenient \lstinline{class}
 scope:
 
@@ -193,8 +195,8 @@ class myObject {
 };
 \end{urbifixme}
 
-\subsection{Tags}
 
+\subsection{Tags}
 \paragraph{How do I create a tag?}
 
 
