doc: simple fix.
	* doc/specs/lang.tex: Simple fix.

--- a/doc/specs/lang.tex
+++ b/doc/specs/lang.tex
@@ -179,7 +179,7 @@ for instance.  They are listed in \autoref{tab:keywords}.
 \subsection{Literals}
 \subsubsection{Durations}
 
-\dfn{Durations} (see \autoref{sec:us-syn-lit-float}) are floats
+\dfn{Durations} are floats (see \autoref{sec:us-syn-lit-float})
 followed by a time unit. They are simply equivalent to the same float,
 expressed in seconds. For instance, \lstinline|1s 1ms|, which stands
 for ``one second and 1 millisecond'', is strictly equivalent to
