--- a/doc/urbi-report.sty
+++ b/doc/urbi-report.sty
@@ -157,6 +157,12 @@
       #1}}
   {}
 
+\lstnewenvironment{cxx}[1][]
+  {\lstset{language=C++,
+      basicstyle=\ttfamily\footnotesize,
+      #1}}
+  {}
+
 %% ----------- %%
 %% maketitle.  %%
 %% ----------- %%
